# ProgrammentwurfQ2

./: CMakeLists.txt
Documentation/: Comment.txt  Part2Task1.txt  Part2Task1ClassDiagramm.drawio  Part2Task2.txt  Part2Task3.txt  Part2Task4.txt
ProgrammentwurfQ2/: CMakeLists.txt  ProgrammentwurfQ2.cpp  ProgrammentwurfQ2.h
ProgrammentwurfQ2/Sensors/: InsideTemperatureSensor.cpp  InsideTemperatureSensor.h  OutsideTemperatureSensor.cpp  OutsideTemperatureSensor.h  Sensor.cpp  Sensor.h  SensorMeasureThread.cpp  SensorMeasureThread.h  SunIntensitySensor.cpp  SunIntensitySensor.h  UmweltSensor.cpp  UmweltSensor.h
ProgrammentwurfQ2/TemperatureMonitor/: TemperatureMonitor.cpp  TemperatureMonitor.h
ProgrammentwurfQ2/actors/: Jalousie.cpp  Jalousie.h  JalousieSteuerung.cpp  JalousieSteuerung.h
ProgrammentwurfQ2/api/: CMakeLists.txt  Consumer.cpp  Consumer.h  Dispatcher.cpp  Dispatcher.h  Producer.cpp  Producer.h  Umwelt.cpp  Umwelt.h  main_example.cpp
ProgrammentwurfQ2/apiWrapper/: CustomConsumer.cpp  CustomConsumer.h  CustomDispatcher.cpp  CustomDispatcher.h
ProgrammentwurfQ2/controllers/: Controller.cpp  Controller.h  JalousieController.cpp  JalousieController.h
ProgrammentwurfQ2/multithreading/: CustomThread.cpp  CustomThread.h
